# NexaRead-AI

./: .env.example  .gitignore  AGENTS.md  ASSET_LICENSES.md  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: dependencies.py  router.py
backend/app/core/: config.py  observability.py
backend/app/db/: session.py
backend/app/models/: __init__.py  annotation.py  auth.py  document.py  keyword.py  rag.py
backend/app/schemas/: annotation.py  auth.py  dashboard.py  document.py  health.py  keyword.py  library.py  personalization.py  rag.py  reader.py
backend/app/services/: annotations.py  auth.py  auth_rate_limit.py  dashboard.py  document_cover.py  document_parser.py  documents.py  docx_parser.py  epub_parser.py  keyword_detection.py  (+18 more)
backend/migrations/: env.py
backend/tests/: conftest.py  pdf_factory.py  test_ai_layout_repair.py  test_annotations_api.py  test_auth_api.py  test_auth_config.py  test_auth_models.py  test_auth_rate_limit.py  test_cross_account_isolation.py  test_dashboard_api.py  test_document_cover.py  test_document_layout.py  test_documents.py  test_health.py  test_keyword_detection.py  test_keywords_api.py  test_layout_models.py  test_library_organization.py  test_lifespan.py  test_multi_format.py  test_pdf_parser.py  test_performance_quality.py  test_personalization_api.py  test_processing_ux.py  test_rag_api.py  test_rag_chunking.py  test_rag_evaluation.py  test_rag_providers.py  test_rag_retrieval.py  test_rate_limit.py  test_reader_api.py
(+217 files in other folders)
