[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "nexaread-api"
version = "0.1.0"
description = "NexaRead AI backend API"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.18.5,<2.0",
  "argon2-cffi>=23.1,<26.0",
  "asyncpg>=0.30,<1.0",
  "boto3>=1.40,<2.0",
  "beautifulsoup4>=4.13,<5.0",
  "bleach>=6.2,<7.0",
  "dramatiq[redis]>=2.2,<3.0",
  "EbookLib>=0.20,<1.0",
  "fastapi>=0.139.0,<0.140",
  "httpx>=0.28,<1.0",
  "openai>=2.20,<3.0",
  "pgvector>=0.4,<1.0",
  "PyMuPDF>=1.26,<2.0",
  "pydantic-settings>=2.14.2,<3.0",
  "python-multipart>=0.0.20,<1.0",
  "python-docx>=1.2,<2.0",
  "redis>=6.0,<8.0",
  "sqlalchemy[asyncio]>=2.0.51,<3.0",
  "uvicorn>=0.35,<1.0",
]

[project.optional-dependencies]
dev = [
  "aiosqlite>=0.21,<1.0",
  "mypy>=1.18,<2.0",
  "pytest>=8.4,<10.0",
  "ruff>=0.12,<1.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
